--- a/client/staff.jade
+++ b/client/staff.jade
@@ -59,6 +59,7 @@ template(name='hc_session')
                 
         .ui.small.grey.header #{when}
         +boolean_edit key='active' direct=true
+        +boolean_edit key='approved' direct=true
         
         //- unless confirmed
         .ui.fluid.green.button
