checkpoint kiosk doc file structure, init kiosk settings in staff view

--- a/client/front.jade
+++ b/client/front.jade
@@ -134,8 +134,9 @@ template(name='model_scroller')
 
 template(name='healthclub_status')
     .ui.basic.segment
-        .ui.header
-            |upper hot tub out of order
+        .ui.inline.header
+            i.red.ban.icon
+            |upper hot tub
         div
         .ui.inline.header
             i.green.checkmark.icon
