--- a/client/client.jade
+++ b/client/client.jade
@@ -29,8 +29,8 @@ template(name='layout')
     .ui.stackable.grid(class=invert_class)
         .centered.row
             .sixteen.wide.column
-                if displaying_profile
-                    +checkin_card displaying_profile
+                if current_session_doc
+                    +checkin_card current_session_doc
                 else 
                     +yield
         //- if is_eric
@@ -49,8 +49,8 @@ template(name='layout')
 
 
 template(name='mlayout')
-    if displaying_profile
-        +checkin_card displaying_profile
+    if current_session_doc
+        +checkin_card current_session_doc
     else 
         +yield
 
