unit resident/owner/permit previews in building view unit_cards

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -18,7 +18,7 @@ template(name='nav')
                     a.item(href='/buildings' class="{{isActivePath '/buildings'}}")
                         //- i.th.large.large.icon
                         +i name='apartment' classes='ui mini inline image'
-                        |buildings
+                        .mobile.hidden &nbsp; buildings
                 //- a.header.icon.set_units.item(href='/m/unit' class="{{isActivePath '/m/unit'}}")
                 //-     //- i.th.large.large.icon
                 //-     +i name='room'    
