working guest multi_doc_input for checkin system, minor updates to doc checkin session structure

--- a/client/kiosk.jade
+++ b/client/kiosk.jade
@@ -90,7 +90,7 @@ template(name='healthclub_session')
                 .row
                     .sixteen.wide.column
                         if rules_signed
-                            .ui.big.fluid.basic.green.button.healthclub_checkin
+                            .ui.big.fluid.basic.green.button.submit_checkin
                                 //- +i name='treadmill' classes='ui inline image'
                                 .ui.inline.inverted.header 
                                     //- +i name='treadmill'
